# swagger.json
@@ -7937,7 +7937,30 @@
                 "Bearer": []
               }
             ],
-            "parameters": [],
+            "parameters": [
+              {
+                "name": "is_pagination",
+                "in": "query",
+                "description": "is_pagination: 0=> no, 1=> yes",
+                "required": false,
+                "type": "number",
+                "enum":[0,1]
+              },
+              {
+                "name": "page",
+                "in": "query",
+                "description": "current page count to access: Required if is_pagination is 1",
+                "required": false,
+                "type": "number"
+              },
+              {
+                "name": "page_size",
+                "in": "query",
+                "description": "no of items per page: Required if is_pagination is 1",
+                "required": false,
+                "type": "number"
+              }
+            ],
             "responses": {}
           }
         },
